Overlay&Modal [FIX] Prevents angular-ui from adapting z-index

--- a/scss/core/elements/_overlay.scss
+++ b/scss/core/elements/_overlay.scss
@@ -7,7 +7,7 @@
 			top: 0; left: 0;
 			height: 100%;
 			width: 100%;
-			z-index: map-gets($vars, zIndex) !important;
+			z-index: map-gets($vars, zIndex);
 			background-color: map-gets($vars, background);
 		}
 	}
